# Concurso-Datos-IA

./: .dockerignore  .env.example  .gitignore  .mcp.json  AGENTS.md  DESIGN.md  Dockerfile  Procfile  README.es.md  README.md  nixpacks.toml  opencode.json  pyproject.toml  railway.json  start.sh
apps/backend/: README.md  pyproject.toml
apps/backend/app/: __init__.py  config.py  main.py
apps/backend/app/agents/: __init__.py  few_shots.py  graph.py  llm.py  tools.py
apps/backend/app/channels/: __init__.py  telegram_bot.py
apps/backend/app/few_shots/: patterns.json
apps/backend/app/graph/: __init__.py  builder.py  loader.py  synonyms.py
apps/backend/app/mcp_server/: __init__.py  server.py
apps/backend/data/: hero_questions.yaml  priority_datasets.yaml
apps/backend/scripts/: __init__.py  build_embeddings.py  build_graph.py  clear_embeddings.py  eval_agent.py  eval_retrieval.py  find_secop_sancionados.py  ingest_catalog.py  inspect_db_state.py  pull_schemas.py  test_agent.py  test_hero10.py  test_llm.py  test_quick.py  test_search_only.py  update_vector_dim.py  verify_match_catalog.py  verify_secop_sancionados.py  verify_telegram_format.py
apps/backend/tests/: test_catalog_fusion.py  test_catalog_ingest.py  test_config.py  test_cors_config.py  test_embeddings_dim.py  test_eval_harness.py  test_join_node.py  test_make_chart_tool.py  test_migrations_history.py  test_migrations_run_order.py  test_no_registry_refs.py  test_relevance_gate.py  test_reranker.py  test_search_selection.py  test_socrata_client.py  test_telegram_format.py  test_triage.py
(+41 files in other folders)
