[project]
name = "datia-backend"
version = "0.1.0"
description = "DATIA — AI assistant for Colombian open data (datos.gov.co)"
requires-python = ">=3.11"
readme = "../README.md"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "httpx>=0.27",
  "tenacity>=8.5",
  "pydantic>=2.7",
  "pydantic-settings>=2.4",
  "pyyaml>=6.0",
  "python-dotenv>=1.0",
  "supabase>=2.6",
  "pgvector>=0.3",
  "psycopg[binary]>=3.2",
  "litellm>=1.45",
  "langgraph>=0.2",
  "langchain-core>=0.3",
  "mcp>=1.0",
  "google-genai>=1.0",
  "python-telegram-bot>=21",
  "networkx>=3.3",
  "numpy>=1.26",
  "pandas>=2.2",
  "python-slugify>=8.0",
]

[dependency-groups]
dev = [
  "pytest>=8",
  "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"
